; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/fuse/extr_dev.c_fuse_force_forget.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/fuse/extr_dev.c_fuse_force_forget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.inode* }
%struct.inode = type { i32 }
%struct.fuse_conn = type { i32 }
%struct.fuse_req = type { i64, %struct.TYPE_10__ }
%struct.TYPE_10__ = type { i32, %struct.TYPE_9__*, %struct.TYPE_8__ }
%struct.TYPE_9__ = type { i32, %struct.fuse_forget_in* }
%struct.fuse_forget_in = type { i32 }
%struct.TYPE_8__ = type { i32, i32 }

@FUSE_FORGET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fuse_force_forget(%struct.file* %0, i32 %1) #0 {
  %3 = alloca %struct.file*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.inode*, align 8
  %6 = alloca %struct.fuse_conn*, align 8
  %7 = alloca %struct.fuse_req*, align 8
  %8 = alloca %struct.fuse_forget_in, align 4
  store %struct.file* %0, %struct.file** %3, align 8
  store i32 %1, i32* %4, align 4
  %9 = load %struct.file*, %struct.file** %3, align 8
  %10 = getelementptr inbounds %struct.file, %struct.file* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load %struct.inode*, %struct.inode** %13, align 8
  store %struct.inode* %14, %struct.inode** %5, align 8
  %15 = load %struct.inode*, %struct.inode** %5, align 8
  %16 = call %struct.fuse_conn* @get_fuse_conn(%struct.inode* %15)
  store %struct.fuse_conn* %16, %struct.fuse_conn** %6, align 8
  %17 = call i32 @memset(%struct.fuse_forget_in* %8, i32 0, i32 4)
  %18 = getelementptr inbounds %struct.fuse_forget_in, %struct.fuse_forget_in* %8, i32 0, i32 0
  store i32 1, i32* %18, align 4
  %19 = load %struct.fuse_conn*, %struct.fuse_conn** %6, align 8
  %20 = load %struct.file*, %struct.file** %3, align 8
  %21 = call %struct.fuse_req* @fuse_get_req_nofail_nopages(%struct.fuse_conn* %19, %struct.file* %20)
  store %struct.fuse_req* %21, %struct.fuse_req** %7, align 8
  %22 = load i32, i32* @FUSE_FORGET, align 4
  %23 = load %struct.fuse_req*, %struct.fuse_req** %7, align 8
  %24 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %23, i32 0, i32 1
  %25 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %24, i32 0, i32 2
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 1
  store i32 %22, i32* %26, align 4
  %27 = load i32, i32* %4, align 4
  %28 = load %struct.fuse_req*, %struct.fuse_req** %7, align 8
  %29 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %28, i32 0, i32 1
  %30 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %29, i32 0, i32 2
  %31 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %30, i32 0, i32 0
  store i32 %27, i32* %31, align 8
  %32 = load %struct.fuse_req*, %struct.fuse_req** %7, align 8
  %33 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %32, i32 0, i32 1
  %34 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %33, i32 0, i32 0
  store i32 1, i32* %34, align 8
  %35 = load %struct.fuse_req*, %struct.fuse_req** %7, align 8
  %36 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %35, i32 0, i32 1
  %37 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %36, i32 0, i32 1
  %38 = load %struct.TYPE_9__*, %struct.TYPE_9__** %37, align 8
  %39 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %38, i64 0
  %40 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %39, i32 0, i32 0
  store i32 4, i32* %40, align 8
  %41 = load %struct.fuse_req*, %struct.fuse_req** %7, align 8
  %42 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %41, i32 0, i32 1
  %43 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %42, i32 0, i32 1
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %44, i64 0
  %46 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %45, i32 0, i32 1
  store %struct.fuse_forget_in* %8, %struct.fuse_forget_in** %46, align 8
  %47 = load %struct.fuse_req*, %struct.fuse_req** %7, align 8
  %48 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %47, i32 0, i32 0
  store i64 0, i64* %48, align 8
  %49 = load %struct.fuse_conn*, %struct.fuse_conn** %6, align 8
  %50 = load %struct.fuse_req*, %struct.fuse_req** %7, align 8
  %51 = call i32 @fuse_request_send_nowait(%struct.fuse_conn* %49, %struct.fuse_req* %50)
  ret void
}

declare dso_local %struct.fuse_conn* @get_fuse_conn(%struct.inode*) #1

declare dso_local i32 @memset(%struct.fuse_forget_in*, i32, i32) #1

declare dso_local %struct.fuse_req* @fuse_get_req_nofail_nopages(%struct.fuse_conn*, %struct.file*) #1

declare dso_local i32 @fuse_request_send_nowait(%struct.fuse_conn*, %struct.fuse_req*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
